--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@alpharecycling/rc-tree",
-  "version": "5.3.6-3",
+  "name": "@alpharecycling/tree",
+  "version": "5.3.6",
   "description": "tree ui component for react",
   "engines": {
     "node": ">=10.x"
