publish.yml update

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,16 +10,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set up node
       - uses: actions/setup-node@v1
         with:
           node-version: 10.x
           registry-url: https://npm.pkg.github.com/
           scope: '@alpharecycling'
       - run: npm install
+      - name: Set git username and email
+        run: |
+        git config user.name "$(git log -n 1 --pretty=format:%an)"
+        git config user.email "$(git log -n 1 --pretty=format:%ae)"
+      - name: Publish package
       - run: npm publish
-        with:
-          global: true
-          name: alpha-admin
-          email: '50398408+jmatelowski@users.noreply.github.com'
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
