--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: fregante/setup-git-user@v1
       - name: Set up node
       - uses: actions/setup-node@v1
         with:
@@ -17,10 +18,6 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@alpharecycling'
       - run: npm install
-      - name: Set git username and email
-        run: |
-        git config user.name "$(git log -n 1 --pretty=format:%an)"
-        git config user.email "$(git log -n 1 --pretty=format:%ae)"
       - name: Publish package
       - run: npm publish
         env:
