--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rc-tree",
+  "name": "@alpharecycling/rc-tree",
   "version": "5.3.6-0",
   "description": "tree ui component for react",
   "engines": {
