--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "author": "smith3816@gmail.com",
   "repository": {
     "type": "git",
-    "url": "git@github.com:react-component/tree.git"
+    "url": "git@github.com:alpharecycling/tree.git"
   },
   "bugs": {
-    "url": "http://github.com/react-component/tree/issues"
+    "url": "http://github.com/alpharecycling/tree/issues"
   },
   "license": "MIT",
   "main": "./lib/index",
